--- a/feedbackprize-v2.ipynb
+++ b/feedbackprize-v2.ipynb
@@ -694,9 +694,9 @@
     {
      "data": {
       "text/plain": [
-       "[{'grid': GridSearchCV(cv=5, estimator=LinearRegression(), n_jobs=-1,\n",
-       "param_grid={'fit_intercept': [True, False]}), 'classifier': LinearRegression(fit_intercept=False), 'best score': 0.431213246883791, 'best params': {'fit_intercept': False}, 'cv': 5}, {'grid': GridSearchCV(cv=5,\n",
-       "estimator=MultiOutputRegressor(estimator=GradientBoostingRegressor()),\n",
+       "{'grid': GridSearchCV(cv=5, estimator=LinearRegression(), n_jobs=-1,param_grid={'fit_intercept': [True, False]}),\n",
+       "'classifier': LinearRegression(fit_intercept=False), 'best score': 0.431213246883791, 'best params': {'fit_intercept': False}, 'cv': 5},\n",
+       " {'grid': GridSearchCV(cv=5,estimator=MultiOutputRegressor(estimator=GradientBoostingRegressor()),\n",
        "n_jobs=-1, param_grid={}), 'classifier': MultiOutputRegressor(estimator=GradientBoostingRegressor()), 'best score': 0.4176872586575013, 'best params': {}, 'cv': 5}, {'grid': GridSearchCV(cv=5,\n",
        "estimator=MultiOutputRegressor(estimator=AdaBoostRegressor()),\n",
        "n_jobs=-1, param_grid={}), 'classifier': MultiOutputRegressor(estimator=AdaBoostRegressor()), 'best score': 0.4057761192685268, 'best params': {}, 'cv': 5}, {'grid': GridSearchCV(cv=5, estimator=RandomForestRegressor(), n_jobs=-1, param_grid={}), 'classifier': RandomForestRegressor(), 'best score': 0.398965649662622, 'best params': {}, 'cv': 5}, {'grid': GridSearchCV(cv=5, estimator=KNeighborsRegressor(), n_jobs=-1,\n",
