--- a/feedbackprize-v2.ipynb
+++ b/feedbackprize-v2.ipynb
@@ -694,19 +694,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'grid': GridSearchCV(cv=5, estimator=LinearRegression(), n_jobs=-1,\\n             param_grid={'fit_intercept': [True, False]}), 'classifier': LinearRegression(fit_intercept=False), 'best score': 0.431213246883791, 'best params': {'fit_intercept': False}, 'cv': 5}, {'grid': GridSearchCV(cv=5,\\n             estimator=MultiOutputRegressor(estimator=GradientBoostingRegressor()),\\n             n_jobs=-1, param_grid={}), 'classifier': MultiOutputRegressor(estimator=GradientBoostingRegressor()), 'best score': 0.4176872586575013, 'best params': {}, 'cv': 5}, {'grid': GridSearchCV(cv=5,\\n             estimator=MultiOutputRegressor(estimator=AdaBoostRegressor()),\\n             n_jobs=-1, param_grid={}), 'classifier': MultiOutputRegressor(estimator=AdaBoostRegressor()), 'best score': 0.4057761192685268, 'best params': {}, 'cv': 5}, {'grid': GridSearchCV(cv=5, estimator=RandomForestRegressor(), n_jobs=-1, param_grid={}), 'classifier': RandomForestRegressor(), 'best score': 0.398965649662622, 'best params': {}, 'cv': 5}, {'grid': GridSearchCV(cv=5, estimator=KNeighborsRegressor(), n_jobs=-1,\\n             param_grid={'n_neighbors': [2, 3, 4, 5, 6, 7, 8, 9, 10],\\n                         'p': [1, 2, 5], 'weights': ['uniform', 'distance']}), 'classifier': KNeighborsRegressor(n_neighbors=10, p=1, weights='distance'), 'best score': 0.23786437988714462, 'best params': {'n_neighbors': 10, 'p': 1, 'weights': 'distance'}, 'cv': 5}, {'grid': GridSearchCV(cv=5, estimator=DecisionTreeRegressor(), n_jobs=-1,\\n             param_grid={'min_samples_split': [2, 3, 4, 5, 6, 7, 8, 9, 10]}), 'classifier': DecisionTreeRegressor(min_samples_split=10), 'best score': 0.11364804048849426, 'best params': {'min_samples_split': 10}, 'cv': 5}, {'grid': GridSearchCV(cv=5,\\n             estimator=MultiOutputRegressor(estimator=LinearSVR(max_iter=10000)),\\n             n_jobs=-1, param_grid={}), 'classifier': MultiOutputRegressor(estimator=LinearSVR(max_iter=10000)), 'best score': 0.112735980021841, 'best params': {}, 'cv': 5}]\\n\""
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from operator import itemgetter\n",
-    "result = sorted(result, key=itemgetter('best score'),reverse=True)\n",
-    "print(result)\n",
-    "\n",
+       
     "[{'grid': GridSearchCV(cv=5, estimator=LinearRegression(), n_jobs=-1,\n",
     "             param_grid={'fit_intercept': [True, False]}), 'classifier': LinearRegression(fit_intercept=False), 'best score': 0.431213246883791, 'best params': {'fit_intercept': False}, 'cv': 5}, {'grid': GridSearchCV(cv=5,\n",
     "             estimator=MultiOutputRegressor(estimator=GradientBoostingRegressor()),\n",
@@ -717,122 +705,21 @@
     "                         'p': [1, 2, 5], 'weights': ['uniform', 'distance']}), 'classifier': KNeighborsRegressor(n_neighbors=10, p=1, weights='distance'), 'best score': 0.23786437988714462, 'best params': {'n_neighbors': 10, 'p': 1, 'weights': 'distance'}, 'cv': 5}, {'grid': GridSearchCV(cv=5, estimator=DecisionTreeRegressor(), n_jobs=-1,\n",
     "             param_grid={'min_samples_split': [2, 3, 4, 5, 6, 7, 8, 9, 10]}), 'classifier': DecisionTreeRegressor(min_samples_split=10), 'best score': 0.11364804048849426, 'best params': {'min_samples_split': 10}, 'cv': 5}, {'grid': GridSearchCV(cv=5,\n",
     "             estimator=MultiOutputRegressor(estimator=LinearSVR(max_iter=10000)),\n",
-    "             n_jobs=-1, param_grid={}), 'classifier': MultiOutputRegressor(estimator=LinearSVR(max_iter=10000)), 'best score': 0.112735980021841, 'best params': {}, 'cv': 5}]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "63542fb0",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-01T21:10:19.728556Z",
-     "iopub.status.busy": "2022-11-01T21:10:19.727800Z",
-     "iopub.status.idle": "2022-11-01T21:10:19.736603Z",
-     "shell.execute_reply": "2022-11-01T21:10:19.735713Z"
-    },
-    "papermill": {
-     "duration": 0.692084,
-     "end_time": "2022-11-01T21:10:19.738628",
-     "exception": false,
-     "start_time": "2022-11-01T21:10:19.046544",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nfrom sklearn.linear_model import LogisticRegression\\nfrom sklearn.svm import SVC\\nfrom sklearn.ensemble import RandomForestClassifier\\nfrom sklearn.ensemble import GradientBoostingClassifier\\nfrom sklearn.pipeline import Pipeline\\nfrom sklearn.model_selection import GridSearchCV, RandomizedSearchCV\\nfrom sklearn.tree import DecisionTreeClassifier\\nfrom sklearn.naive_bayes import MultinomialNB\\nfrom sklearn.neighbors import KNeighborsClassifier\\nfrom sklearn.multioutput import MultiOutputClassifier\\nfrom sklearn.preprocessing import MinMaxScaler\\n\\nresult=[]\\n# Initialze the estimators\\nprint('1st model')\\nclf1 = MultiOutputClassifier(RandomForestClassifier())\\nparam1 = {}\\nparam1['estimator__n_estimators'] = [10, 25, 50, 100]\\nparam1['estimator__max_depth'] = [10,20,30]\\nparam1['estimator__max_features'] = ['auto', 'sqrt', 'log2']\\ngs = GridSearchCV(clf1, param1, cv=5, n_jobs=-1).fit(df_train_x, df_train_y)\\nresult.append({ 'grid': gs,\\n                'classifier': gs.best_estimator_,\\n                'best score': gs.best_score_,\\n                'best params': gs.best_params_,\\n                'cv': gs.cv })\\n\\nprint('2nd model')\\nclf2 = MultiOutputClassifier(SVC(probability=True, random_state=42))\\nparam2 = {}\\nparam2['estimator__C'] = [10**-2, 10**-1, 10**0, 10**1, 10**2]\\ngs = GridSearchCV(clf2, param2, cv=5, n_jobs=-1).fit(df_train_x, df_train_y)\\nresult.append({ 'grid': gs,\\n                'classifier': gs.best_estimator_,\\n                'best score': gs.best_score_,\\n                'best params': gs.best_params_,\\n                'cv': gs.cv })\\n\\nprint('3rd model')\\nclf3 = MultiOutputClassifier(DecisionTreeClassifier())\\nparam3 = {}\\nparam3['estimator__max_depth'] = [5,10,25,None]\\nparam3['estimator__min_samples_split'] = [2,5,10]\\ngs = GridSearchCV(clf3, param3, cv=5, n_jobs=-1).fit(df_train_x, df_train_y)\\nresult.append({ 'grid': gs,\\n                'classifier': gs.best_estimator_,\\n                'best score': gs.best_score_,\\n                'best params': gs.best_params_,\\n                'cv': gs.cv })\\n\\nprint('4th model')\\nclf4 = MultiOutputClassifier(KNeighborsClassifier())\\nparam4 = {}\\nparam4['estimator__n_neighbors'] = [2,5,10,25,50]\\ngs = GridSearchCV(clf4, param4, cv=5, n_jobs=-1).fit(df_train_x, df_train_y)\\nresult.append({ 'grid': gs,\\n                'classifier': gs.best_estimator_,\\n                'best score': gs.best_score_,\\n                'best params': gs.best_params_,\\n                'cv': gs.cv })\\n\\nprint('5th model')\\nclf5 = MultiOutputClassifier(MultinomialNB())\\nparam5 = {}\\nparam5['estimator__alpha'] = [10**0, 10**1, 10**2]\\ngs = GridSearchCV(clf5, param5, cv=5, n_jobs=-1).fit(df_train_x, df_train_y)\\nresult.append({ 'grid': gs,\\n                'classifier': gs.best_estimator_,\\n                'best score': gs.best_score_,\\n                'best params': gs.best_params_,\\n                'cv': gs.cv })\\n#1st model\\n#2nd model\\n#3rd model\\n#4th model\\n#5th model\\n\""
-      ]
+    "             n_jobs=-1, param_grid={}), 'classifier': MultiOutputRegressor(estimator=LinearSVR(max_iter=10000)), 'best score': 0.112735980021841, 'best params': {}, 'cv': 5}]\n"      ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'''\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.multioutput import MultiOutputClassifier\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "\n",
-    "result=[]\n",
-    "# Initialze the estimators\n",
-    "print('1st model')\n",
-    "clf1 = MultiOutputClassifier(RandomForestClassifier())\n",
-    "param1 = {}\n",
-    "param1['estimator__n_estimators'] = [10, 25, 50, 100]\n",
-    "param1['estimator__max_depth'] = [10,20,30]\n",
-    "param1['estimator__max_features'] = ['auto', 'sqrt', 'log2']\n",
-    "gs = GridSearchCV(clf1, param1, cv=5, n_jobs=-1).fit(df_train_x, df_train_y)\n",
-    "result.append({ 'grid': gs,\n",
-    "                'classifier': gs.best_estimator_,\n",
-    "                'best score': gs.best_score_,\n",
-    "                'best params': gs.best_params_,\n",
-    "                'cv': gs.cv })\n",
-    "\n",
-    "print('2nd model')\n",
-    "clf2 = MultiOutputClassifier(SVC(probability=True, random_state=42))\n",
-    "param2 = {}\n",
-    "param2['estimator__C'] = [10**-2, 10**-1, 10**0, 10**1, 10**2]\n",
-    "gs = GridSearchCV(clf2, param2, cv=5, n_jobs=-1).fit(df_train_x, df_train_y)\n",
-    "result.append({ 'grid': gs,\n",
-    "                'classifier': gs.best_estimator_,\n",
-    "                'best score': gs.best_score_,\n",
-    "                'best params': gs.best_params_,\n",
-    "                'cv': gs.cv })\n",
-    "\n",
-    "print('3rd model')\n",
-    "clf3 = MultiOutputClassifier(DecisionTreeClassifier())\n",
-    "param3 = {}\n",
-    "param3['estimator__max_depth'] = [5,10,25,None]\n",
-    "param3['estimator__min_samples_split'] = [2,5,10]\n",
-    "gs = GridSearchCV(clf3, param3, cv=5, n_jobs=-1).fit(df_train_x, df_train_y)\n",
-    "result.append({ 'grid': gs,\n",
-    "                'classifier': gs.best_estimator_,\n",
-    "                'best score': gs.best_score_,\n",
-    "                'best params': gs.best_params_,\n",
-    "                'cv': gs.cv })\n",
-    "\n",
-    "print('4th model')\n",
-    "clf4 = MultiOutputClassifier(KNeighborsClassifier())\n",
-    "param4 = {}\n",
-    "param4['estimator__n_neighbors'] = [2,5,10,25,50]\n",
-    "gs = GridSearchCV(clf4, param4, cv=5, n_jobs=-1).fit(df_train_x, df_train_y)\n",
-    "result.append({ 'grid': gs,\n",
-    "                'classifier': gs.best_estimator_,\n",
-    "                'best score': gs.best_score_,\n",
-    "                'best params': gs.best_params_,\n",
-    "                'cv': gs.cv })\n",
-    "\n",
-    "print('5th model')\n",
-    "clf5 = MultiOutputClassifier(MultinomialNB())\n",
-    "param5 = {}\n",
-    "param5['estimator__alpha'] = [10**0, 10**1, 10**2]\n",
-    "gs = GridSearchCV(clf5, param5, cv=5, n_jobs=-1).fit(df_train_x, df_train_y)\n",
-    "result.append({ 'grid': gs,\n",
-    "                'classifier': gs.best_estimator_,\n",
-    "                'best score': gs.best_score_,\n",
-    "                'best params': gs.best_params_,\n",
-    "                'cv': gs.cv })\n",
-    "#1st model\n",
-    "#2nd model\n",
-    "#3rd model\n",
-    "#4th model\n",
-    "#5th model\n",
-    "'''"
+    "from operator import itemgetter\n",
+    "result = sorted(result, key=itemgetter('best score'),reverse=True)\n",
+    "print(result)\n",
+    "\n"
    ]
   },
+
   {
    "cell_type": "code",
    "execution_count": 8,
